[package]
name = "yew_astro"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro = { git = "https://github.com/stephaneworkspace/astro_compute_swisseph.git" }
yew = "0.10.0"
